--- a/sec3/dia4/dia4.csproj
+++ b/sec3/dia4/dia4.csproj
@@ -10,7 +10,9 @@
   <NoWarn>$(NoWarn);1591</NoWarn>
 </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <InternalsVisibleTo Include="app.Test" />
   </ItemGroup>
 
 </Project>
